tests/baselines/reference/useSharedArrayBuffer2(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
useSharedArrayBuffer2.ts(1,16): error TS2583: Cannot find name 'SharedArrayBuffer'. Do you need to change your target library? Try changing the 'lib' compiler option to 'es2017' or later.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== useSharedArrayBuffer2.ts (1 errors) ====
    var foge = new SharedArrayBuffer(1024);
                   ~~~~~~~~~~~~~~~~~
!!! error TS2583: Cannot find name 'SharedArrayBuffer'. Do you need to change your target library? Try changing the 'lib' compiler option to 'es2017' or later.
    var bar = foge.slice(1, 10);
    var len = foge.byteLength;